examples/test/testpolicy11121.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11121
  namespace: namespace359
spec:
  podSelector:
    matchLabels:
      key42: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value46
          key5: value32
          key21: value38
      podSelector:
        matchLabels:
          key30: value43
          key35: value14
          key16: value37
